Sun Oct 25 10:12:05 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* symbol.c (op_tbl): add DOTQ for ripper.  [Feature #11537]

Sat Oct 24 22:51:18 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* configure.in: fixed build failure of Haiku.
	  [fix GH-984] Patch by @kallisti5
	* ext/socket/getaddrinfo.c: ditto.
	* ext/socket/getnameinfo.c: ditto.
	* ext/socket/rubysocket.h: ditto.

Sat Oct 24 21:16:53 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/fileutils/test_fileutils.rb (test_uptodate): relax error
	  message format.  [Feature #9025], [ruby-core:71178] [Bug #11617]

Sat Oct 24 21:06:43 2015  Shota Fukumori (sora_h)  <her@sorah.jp>

	* lib/mkmf.rb: Revert r45640 because it may lead to link
	  with different libruby. [Bug #9760]

Sat Oct 24 15:42:20 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bootstraptest/test_method.rb: relax error message format.

	* test/ruby/test_arity.rb (err_mess): ditto.
	  [Feature #9025], [ruby-core:71178] [Bug #11617]

Sat Oct 24 12:47:47 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* vm_insnhelper.c: improved error message for "wrong number
	  of arguments", distinguishing given and expected argument
	  numbers clearly. [Feature #9025]

Sat Oct 24 11:57:59 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_insnhelper.c: remove the typedef redeclaration of
	  vm_call_handler.

Sat Oct 24 07:29:12 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/forwardable.rb (def_instance_delegator, def_single_delegator):
	  match backtraces against ::Forwardable in case the target class
	  is a subclass of BasicObject and does not include Kernel.
	  [ruby-core:71176] [Bug #11616]

Sat Oct 24 04:10:13 2015  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (make_compile_option_value): include frozen_string_literal*
	  in a made option value.

	* vm_opts.h: forgot to add OPT_FROZEN_STRING_LITERAL_DEBUG
	  at last commit.

Sat Oct 24 03:58:02 2015  Koichi Sasada  <ko1@atdot.net>

	* ruby.c: introduce --enable-frozen-string-literal-debug option.